deps/crates/vendor/quote/tests/ui/does-not-have-iter-interpolated.stderr
error[E0277]: repetition contains no interpolated value that is an iterator
 --> tests/ui/does-not-have-iter-interpolated.rs:8:5
  |
8 |     quote!(#(#nonrep)*);
  |     ^^^^^^^^^^^^^^^^^^^ none of the values interpolated inside this repetition are iterable
  |
help: the trait `quote::__private::CheckHasIterator<true>` is not implemented for `quote::__private::HasIterator<false>`
      but it is implemented for `quote::__private::HasIterator<true>`
 --> src/runtime.rs
  |
  | impl CheckHasIterator<true> for HasIterator<true> {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the macro `$crate::quote_token_with_context` which comes from the expansion of the macro `quote` (in Nightly builds, run with -Z macro-backtrace for more info)
