deps/crates/vendor/quote/tests/ui/does-not-have-iter-interpolated.rs
use quote::quote;

fn main() {
    let nonrep = "";

    // Without some protection against repetitions with no iterator somewhere
    // inside, this would loop infinitely.
    quote!(#(#nonrep)*);
}
